plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.mpruy.gor-gemilangcondet'
version = '0.0.1-SNAPSHOT'
description = 'Sistem informasi GOR Gemilang Condet adalah sistem informasi terintegrasi milik CV Sumber Anugerah Ilahi yang bertujuan untuk digitasi operasional GOR Gemilang Condet guna mengatasi kendala pencatatan manual pada buku tabel dan meminimalisir risiko double booking. Fokus utama sistem ini adalah otomasi manajemen jadwal lapangan supaya dapat diakses secara transparan oleh pelanggan dan staf, serta mengintegrasikan administrasi kantin dan toko olahraga dalam satu platform reservasi. Melalui fitur pelacakan stok barang dan rekapitulasi pendapatan harian yang otomatis, sistem ini dirancang untuk meningkatkan akurasi data keuangan dan memfasilitasi pengambilan keputusan strategis bagi pemilik melalui dasbor tren pendapatan serta analisis preferensi produk pelanggan.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-restclient'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'com.bucket4j:bucket4j-core:8.10.1'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'
    implementation 'com.github.ben-manes.caffeine:jcache:3.1.8'
    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'org.springframework.boot:spring-boot-starter-json'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-rest-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
	testImplementation 'com.fasterxml.jackson.core:jackson-databind'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'
}

// Load .env file for bootRun
def loadEnv = {
	def envFile = file('.env')
	def envVars = [:]
	if (envFile.exists()) {
		envFile.eachLine { line ->
			line = line.trim()
			if (line && !line.startsWith('#') && line.contains('=')) {
				def idx = line.indexOf('=')
				envVars[line.substring(0, idx).trim()] = line.substring(idx + 1).trim()
			}
		}
	}
	return envVars
}

tasks.named('bootRun') {
	environment loadEnv()
}

tasks.named('test') {
	useJUnitPlatform()
	// Keep one JVM test worker to avoid Windows paging-file exhaustion.
	maxParallelForks = 1
	minHeapSize = '256m'
	maxHeapSize = '768m'
	// Required for Mockito inline mock maker on recent JDKs.
	jvmArgs '-Djdk.attach.allowAttachSelf=true', '-XX:+EnableDynamicAgentLoading'
	finalizedBy jacocoTestReport
}

jacoco {
	toolVersion = '0.8.12'
}

// Jacoco test report exclusions
def jacocoExclusions = [
    '**/BackendApiApplication*',
    '**/config/*',
    '**/dto/*',
]

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
		html.outputLocation = layout.buildDirectory.dir('reports/jacoco/html')
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, excludes: jacocoExclusions)
		}))
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.80
            }
        }
		rule {
			limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.90
            }
		}
	}
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, excludes: jacocoExclusions)
        }))
    }
}
